2011-03-14  Alexey Marinichev  <amarinichev@chromium.org>

Reviewed by Kenneth Russell.

        Graphics Context is not properly recovered if the GPU process dies.
        https://bugs.webkit.org/show_bug.cgi?id=56148

        Split context recreation into two steps.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::composite):
        (WebKit::WebViewImpl::doComposite):
        (WebKit::WebViewImpl::reallocateRenderer):
        * src/WebViewImpl.h:

Canonical link: https://commits.webkit.org/70993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81113 268f45cc-cd09-0410-ab3c-d52691b4dbfc